--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="menu__item menu__item_stage_current"><a href="#">Вторая ссылка (активная)</a></li>
                     <li class="menu__item menu__item_stage"><a href="#">Третья ссылка</a></li>
                     <li class="menu__item"><a href="#">Личный кабинет</a></li>
-                    <li class="menu__item"><a href="#">Выйти</a></li>
+                    <li class="menu__item"><a href="#">Exit</a></li>
                 </ul>
             </nav>
         </aside>
@@ -32,7 +32,7 @@
         <main class="main">
             <header class="header">
                 <div class="header__info">
-                    <h1 class="header__head">Заголовок страницы</h1>
+                    <h1 class="header__head">Заголовок</h1>
                     <p class="header__text">В отличие от пылевого и ионного хвостов, направление поступает в лимногляциальный часовой угол</p>
                 </div>
             </header>
