--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
     <div id="wrapper">
-        <!-- Sidebar -->
+        <!-- side -->
         <aside class="sidebar">
             <div class="sidebar__logo">
                 <a href="#">
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
         </aside>
-        <!-- /Sidebar -->
+        <!-- /side -->
         <!-- Main content -->
         <main class="main">
             <header class="header">
