--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li class="menu__item menu__item_stage_current"><a href="#">Вторая ссылка (активная)</a></li>
                     <li class="menu__item menu__item_stage"><a href="#">Третья ссылка</a></li>
                     <li class="menu__item"><a href="#">Личный кабинет</a></li>
-                    <li class="menu__item"><a href="#">Exit</a></li>
+                    <li class="menu__item"><a href="#">Exit now</a></li>
                 </ul>
             </nav>
         </aside>
