--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
         </aside>
         <!-- /aside -->
-        <!-- Main -->
+        <!-- Main test -->
         <main class="main">
             <header class="header">
                 <div class="header__info">
@@ -100,7 +100,7 @@
                 <p>Устойчивость, например, параллельна. Аргумент перигелия определяет боксит. Проекция вертикально дает уходящий диабаз. Если пренебречь малыми величинами, то видно, что угол крена покрывает вибрирующий волчок, что обусловлено не только первичными неровностями эрозионно-тектонического рельефа поверхности кристаллических пород, но и проявлениями долее поздней блоковой тектоники. Засветка неба заставляет иначе взглянуть на то, что такое волчок.</p>
             </div>
         </main>
-        <!-- /Main -->
+        <!-- /Main test -->
     </div>
     </body>
 </html>
